--- a/index.html
+++ b/index.html
@@ -792,11 +792,13 @@
                     Computer Science and Technology, Tongji University, Shanghai, China.
 <!--                     Here is my <a href="https://victorup.github.io/pdf/xinpeng_wang_cv.pdf">cv</a>. -->
                     <!--                    and <a href="https://victorup.github.io/_pages/*">简历</a>.</p>-->
-                <p>My research interest is large language model (LLM) and multimodal generation.
+<!--                 <p>My research interest is large language model (LLM) and multimodal generation. -->
+                <p>My research interests include Natural Language Generation and Multimodal Generation.
 <!--                     open-ended language generation -->
 <!--                     including <strong>story generation</strong> and <strong>dialogue generation</strong>
                     with knowledge-enhancing and emotion-driving.</p> -->
-                <p>I am currently an intern at Microsoft Research Asia, advised by <a href="https://www.microsoft.com/en-us/research/people/xiaoyuanyi/">Dr. Xiaoyuan Yi</a>.</p>
+<!--                 <p>I am currently an intern at Microsoft Research Asia, advised by <a href="https://www.microsoft.com/en-us/research/people/xiaoyuanyi/">Dr. Xiaoyuan Yi</a>.</p> -->
+                <p>I have previously interned at Microsoft Research Asia, advised by <a href="https://www.microsoft.com/en-us/research/people/xiaoyuanyi/">Dr. Xiaoyuan Yi</a>.</p>
 <!--                 studying multimodal generation -->
                 <h2 id="main-publications">Main Publications</h2>
                 <p><em>* indicates equal contribution</em></p>
