--- a/index.html
+++ b/index.html
@@ -803,6 +803,10 @@
                 <h2 id="main-publications">Main Publications</h2>
                 <p><em>* indicates equal contribution</em></p>
                 <ol>
+                    <li>Xuan Gong, Tianshi Ming, <strong>Xinpeng Wang</strong>, Zhihua Wei.
+                        DAMRO: Dive into the Attention Mechanism of LVLM to Reduce Object Hallucination.
+                        <em>EMNLP 2024 Main Conference (Oral)</em>.
+                        <a href="https://arxiv.org/pdf/2410.04514">[pdf]</a></li>
                     <li><strong>Xinpeng Wang*</strong>, Shitong Duan*, Xiaoyuan Yi, Jing Yao, Shanlin Zhou, Zhihua Wei, Peng Zhang, Dongkuan Xu, Maosong Sun, Xing Xie.
                         On the Essence and Prospect: An Investigation of Alignment Approaches for Big Models.
                         <em>IJCAI 2024</em>.
