--- a/index.html
+++ b/index.html
@@ -766,7 +766,7 @@
             <div class="author__avatar"><img src="./victor_files/Victor.jpg"
                                              class="author__avatar" alt="Xinpeng Wang "></div>
             <div class="author__content"><h3 class="author__name">Xinpeng Wang </h3>
-                <p class="author__bio">A third-year Ph.D. student at <a href="https://en.tongji.edu.cn/">Tongji
+                <p class="author__bio">A fourth-year Ph.D. student at <a href="https://en.tongji.edu.cn/">Tongji
                     University.</a></p></div>
             <div class="author__urls-wrapper">
                 <button class="btn btn--inverse">Follow</button>
@@ -788,7 +788,7 @@
         <div class="page__inner-wrap">
             <header><h1 class="page__title" itemprop="headline">Xinpeng Wang 王新鹏</h1></header>
             <section class="page__content" itemprop="text">
-                <p>I am now a third-year Ph.D. student in the Intelligent Information Processing Lab, Department of
+                <p>I am now a fourth-year Ph.D. student in the Intelligent Information Processing Lab, Department of
                     Computer Science and Technology, Tongji University, Shanghai, China.
 <!--                     Here is my <a href="https://victorup.github.io/pdf/xinpeng_wang_cv.pdf">cv</a>. -->
                     <!--                    and <a href="https://victorup.github.io/_pages/*">简历</a>.</p>-->
