--- a/index.html
+++ b/index.html
@@ -790,6 +790,8 @@
             <section class="page__content" itemprop="text">
                 <p>I am now a fourth-year Ph.D. student in the Intelligent Information Processing Lab, Department of
                     Computer Science and Technology, Tongji University, Shanghai, China.
+                    <p>I have interned at Microsoft Research Asia, advised by <a href="https://www.microsoft.com/en-us/research/people/xiaoyuanyi/">Dr. Xiaoyuan Yi</a>.</p>
+                    <p>My research focuses on controllable text generation in large language models (LLMs), including core capabilities (reasoning, hallucination mitigation, safety & alignment), and applied systems (Agent and Retrieval-Augmented Generation). Earlier, I worked on story generation and dialogue systems.</p>
 <!--                     Here is my <a href="https://victorup.github.io/pdf/xinpeng_wang_cv.pdf">cv</a>. -->
                     <!--                    and <a href="https://victorup.github.io/_pages/*">简历</a>.</p>-->
 <!--                 <p>My research interest is large language model (LLM) and multimodal generation. -->
@@ -798,7 +800,6 @@
 <!--                     including <strong>story generation</strong> and <strong>dialogue generation</strong>
                     with knowledge-enhancing and emotion-driving.</p> -->
 <!--                 <p>I am currently an intern at Microsoft Research Asia, advised by <a href="https://www.microsoft.com/en-us/research/people/xiaoyuanyi/">Dr. Xiaoyuan Yi</a>.</p> -->
-                <p>I have interned at Microsoft Research Asia, advised by <a href="https://www.microsoft.com/en-us/research/people/xiaoyuanyi/">Dr. Xiaoyuan Yi</a>.</p>
 <!--                 studying multimodal generation -->
                 <h2 id="main-publications">Main Publications</h2>
                 <p><em>* indicates equal contribution</em></p>
