--- a/index.html
+++ b/index.html
@@ -795,7 +795,7 @@
 <!--                     Here is my <a href="https://victorup.github.io/pdf/xinpeng_wang_cv.pdf">cv</a>. -->
                     <!--                    and <a href="https://victorup.github.io/_pages/*">简历</a>.</p>-->
 <!--                 <p>My research interest is large language model (LLM) and multimodal generation. -->
-                <p>My research interests include Natural Language Generation and Multimodal Generation.
+<!--                 <p>My research interests include Natural Language Generation and Multimodal Generation. -->
 <!--                     open-ended language generation -->
 <!--                     including <strong>story generation</strong> and <strong>dialogue generation</strong>
                     with knowledge-enhancing and emotion-driving.</p> -->
