--- a/index.html
+++ b/index.html
@@ -788,10 +788,9 @@
         <div class="page__inner-wrap">
             <header><h1 class="page__title" itemprop="headline">Xinpeng Wang 王新鹏</h1></header>
             <section class="page__content" itemprop="text">
-                <p>I am now a fourth-year Ph.D. student in the Intelligent Information Processing Lab, Department of
-                    Computer Science and Technology, Tongji University, Shanghai, China.
+                <p>I am a fourth-year Ph.D. student at the Intelligent Information Processing Lab, Department of Computer Science and Technology, Tongji University (Shanghai, China), under the supervision of <a href="https://cs.tongji.edu.cn/info/1061/2797.htm">Prof. Zhihua Wei</a>.
                     <p>I have interned at Microsoft Research Asia, advised by <a href="https://www.microsoft.com/en-us/research/people/xiaoyuanyi/">Dr. Xiaoyuan Yi</a>.</p>
-                    <p>My research focuses on controllable text generation in large language models (LLMs), including core capabilities (reasoning, hallucination mitigation, safety & alignment), and applied systems (Agent and Retrieval-Augmented Generation). Earlier, I worked on story generation and dialogue systems.</p>
+                    <p>My research focuses on controllable text generation in LLMs/VLMs, with emphasis on enhancing reasoning capabilities, mitigating hallucination phenomena, improving AI alignment, and developing practical agent applications. This work aims to enhance the reliability and controllability of foundation models for real-world deployment.</p>
 <!--                     Here is my <a href="https://victorup.github.io/pdf/xinpeng_wang_cv.pdf">cv</a>. -->
                     <!--                    and <a href="https://victorup.github.io/_pages/*">简历</a>.</p>-->
 <!--                 <p>My research interest is large language model (LLM) and multimodal generation. -->
