--- a/index.html
+++ b/index.html
@@ -790,7 +790,7 @@
             <section class="page__content" itemprop="text">
                 <p>I am a fourth-year Ph.D. student at the Intelligent Information Processing Lab, Department of Computer Science and Technology, Tongji University (Shanghai, China), under the supervision of <a href="https://cs.tongji.edu.cn/info/1061/2797.htm">Prof. Zhihua Wei</a>.
                     <p>I have interned at Microsoft Research Asia, advised by <a href="https://www.microsoft.com/en-us/research/people/xiaoyuanyi/">Dr. Xiaoyuan Yi</a>.</p>
-                    <p>My research focuses on controllable text generation in LLMs/VLMs, with emphasis on enhancing reasoning capabilities, mitigating hallucination phenomena, improving AI alignment, and developing practical agent applications. This work aims to enhance the reliability and controllability of foundation models for real-world deployment.</p>
+                    <p>My research focuses on controllable text generation in LLMs/VLMs, with emphasis on enhancing reasoning capabilities, mitigating hallucination phenomena, improving AI alignment, and developing agent applications. This work aims to enhance the reliability and controllability of foundation models for real-world applications</p>
 <!--                     Here is my <a href="https://victorup.github.io/pdf/xinpeng_wang_cv.pdf">cv</a>. -->
                     <!--                    and <a href="https://victorup.github.io/_pages/*">简历</a>.</p>-->
 <!--                 <p>My research interest is large language model (LLM) and multimodal generation. -->
